<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <is.xyz.mpv.config.ResamplerDialogPreference
        android:key="resampler"
        android:summary="@string/pref_audio_resampler_summary"
        android:dialogMessage="@string/resampler_message"
        android:title="@string/pref_audio_resampler_title"
        app:resampler_entries="@array/resampler_entries"
        app:resampler_values="@array/resampler_values"
        app:resampler_dithering_entries="@array/resampler_dithering_entries"
        app:resampler_dithering_values="@array/resampler_dithering_values" />

    <is.xyz.mpv.config.ReplaygainDialogPreference
        android:key="replaygain"
        android:title="@string/pref_audio_replaygain_title"
        app:replaygain_entries="@array/replaygain_entries"
        app:replaygain_values="@array/replaygain_values" />

    <SwitchPreference
        android:key="audio_pitch_correction"
        android:defaultValue="true"
        android:summaryOff="@string/pitch_correction_summary_disabled"
        android:summaryOn="@string/pitch_correction_summary_enabled"
        android:entries="@array/deband_entries"
        android:entryValues="@array/deband_values"
        android:title="@string/pref_audio_pitch_correction_title" />

</PreferenceScreen>
