<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@android:id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp" />

    <Switch
        android:id="@+id/replaygain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/message"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:switchPadding="8dp"
        android:text="@string/replaygain_switch" />

    <TableRow
        android:id="@+id/replaygainTableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/replaygain"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/replaygainTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:labelFor="@id/replaygain_source"
            android:text="@string/replaygain_source"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Spinner
            android:id="@+id/replaygain_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="16dp" />

    </TableRow>

    <TableRow
        android:id="@+id/replaygainTableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/replaygainTableRow"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:labelFor="@id/param1"
            android:text="@string/replaygain_preamp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/replaygain_preamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:id="@+id/replaygainTableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/replaygainTableRow2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/replaygainTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:labelFor="@id/param1"
            android:text="@string/replaygain_fallback"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/replaygain_fallback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

</RelativeLayout>
